--- a/index.html
+++ b/index.html
@@ -4,13 +4,365 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Greece</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <style>
+        body {
+            background: url('ancient greek.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+
+        .bg-body-tertiary {
+            background-color: rgba(34, 75, 50, 0.85) !important;
+            backdrop-filter: blur(4px);
+        }
+
+        .navbar .nav-link,
+        .navbar-brand {
+            color: #e8f5e9 !important;
+        }
+
+        .navbar .nav-link:hover {
+            color: #a8ffbf !important;
+        }
+
+
+        video {
+            width: 100%;
+            max-width: 800px;
+            height: 550px;
+            border-radius: 20px;
+            object-fit: cover;
+            background-color: #000;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.4);
+        }
+
+        .carousel-caption {
+            background: rgba(0, 0, 0, 0.5);
+            /* semi-transparent black */
+            border-radius: 10px;
+            padding: 15px;
+        }
+
+        .carousel-caption h5,
+        .carousel-caption h4,
+        .carousel-caption p {
+            color: #fff;
+            /* make text white */
+        }
+
+        .intro-section {
+            background-color: rgba(0, 0, 0, 0.6);
+            color: #f5f5f5;
+            border-radius: 15px;
+            padding: 40px;
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        .intro-section h2 {
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+
+        .intro-section p {
+            font-size: 1.1rem;
+            line-height: 1.7;
+        }
+
+        .culture-section {
+            background-color: rgba(0, 0, 0, 0.6);
+            color: #f5f5f5;
+            border-radius: 15px;
+            padding: 40px;
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        .culture-section h2 {
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+
+        .culture-section p {
+            font-size: 1.1rem;
+            line-height: 1.7;
+        }
+
+        .arts-section {
+            background-color: rgba(0, 0, 0, 0.6);
+            color: #f5f5f5;
+            border-radius: 15px;
+            padding: 40px;
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        .arts-section h2 {
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+
+        .history-section p {
+            font-size: 1.1rem;
+            line-height: 1.7;
+
+        }
+
+        .history-section {
+            background-color: rgba(0, 0, 0, 0.6);
+            color: #f5f5f5;
+            border-radius: 15px;
+            padding: 40px;
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        .history-section h2 {
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+
+        .history-section p {
+            font-size: 1.1rem;
+            line-height: 1.7;
+
+        }
+    </style>
+
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg custom-navbar">
+        <div class="container-fluid px-4">
+            <a class="navbar-brand fw-bold fs-3" href="#"> Greece</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item mx-2">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#">Culture</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#">Tourism</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#">History</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container text-center my-5">
+        <video autoplay loop muted playsinline class="d-block mx-auto">
+            <source src="Ancient Greece  AI Generated Video - CommonHub (1080p, h264).mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <div class="container intro-section">
+        <h2>Introduction to Greece</h2>
+        <p>
+            Greece, often called the cradle of Western civilization, is a country rich in history,
+            philosophy, art, and culture. Known for its stunning islands, ancient ruins, and
+            Mediterranean charm, Greece offers a unique blend of natural beauty and historical
+            legacy that continues to inspire the world today.
+        </p>
+    </div>
+
+    <div class="container">
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="acropolis.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>The Acropolis</h5>
+                        <p>The Acropolis is an ancient citadel located on a rocky, high ground in Athens, Greece, and is
+                            one of the most famous ancient sites in the world</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Santorini.webp" class="d-block w-100" alt="santorini">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h4>Santorini</h4>
+                        <p>Santorini is a Greek volcanic island in the Aegean Sea, famous for its stunning caldera
+                            views, cliffside villages with whitewashed buildings and blue-domed churches, and
+                            breathtaking sunsets.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Meteora.jpg" class="d-block w-100" alt="Meteora">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Meteora</h5>
+                        <p>a stunning UNESCO World Heritage site in central Greece known for its unique rock formations
+                            and historic Eastern Orthodox monasteries perched atop towering sandstone pillars</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+
+    <div class="container culture-section">
+        <h2>Greek Culture and Traditions</h2>
+        <p>
+            Greek culture is rich and lively, shaped by ancient history and strong family values. People enjoy music,
+            dancing, and festivals throughout the year. Hospitality is very important, and sharing food with others is a
+            common way to show kindness and friendship.
+        </p>
+    </div>
+
+    <div class="container">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="festival.jpg" class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>athens epidaurus festival</h5>
+                        <p>a major annual arts festival in Greece, running from June to August, that features
+                            world-class theater, dance, music, and opera</p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="Bouzouki.webp" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Bouzouki</h5>
+                        <p>The bouzouki holds a central place in Greek tradition, most notably as the defining
+                            instrument of rebetiko music, a genre often called the "Greek blues"</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="moussakaa.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Moussaka</h5>
+                        <p>a layered casserole, most famously Greek, featuring roasted eggplant and/or potatoes, a rich
+                            meat sauce, and a creamy béchamel topping</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <div class="container arts-section">
+        <h2>Greek Arts</h2>
+        <p>
+            Greek art refers to the visual and applied arts, including architecture, created by the ancient Greeks,
+            focusing on naturalistic and idealized depictions of gods, heroes, and humans, and emphasizing arete
+            (excellence) through proportion, harmony, and realism
+        </p>
+    </div>
+
+    <div class="container">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="greekpainting1.jpg" class="d-block w-100" alt="p1">
+                </div>
+                <div class="carousel-item">
+                    <img src="greekpainting2.jpg" class="d-block w-100" alt="p2">
+                </div>
+                <div class="carousel-item">
+                    <img src="greekpainting3.jpg" class="d-block w-100" alt="p3">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container history-section">
+        <h2>Greek History</h2>
+        <p>
+            Greek history spans from prehistoric times to the modern era, beginning with Stone Age hunter-gatherers and
+            the Bronze Age civilizations of the Minoans and Mycenaeans
+        </p>
+    </div>
+
+    <div class="container">
+        <div class="text-center p-5 text-white">
+            <h1>Minoans</h1>
+        </div>
+        <img src="minoans.webp" class="img-fluid" alt="minoans">
+        <div class="text-center p-5 text-white">
+            <h3>a Bronze Age Aegean civilization that flourished on the island of Crete from approximately 3000
+                to
+                1100
+                BCE</h3>
+        </div>
+    </div>
+
+    <hr class="footer-divider my-4 mx-auto" style="width: 80%; opacity: 0.4;">
+
+    <div class="container">
+        <div class="text-center p-5 text-white">
+            <h1>Mycenaeans</h1>
+        </div>
+        <img src="Mycenaeans.jpg" class="img-fluid d-block mx-auto" alt="mycenaeans">
+        <div class="text-center p-5 text-white">
+            <h3>a warlike, Bronze Age civilization in Greece from approximately 1600 to 1100 BCE that dominated the
+                Aegean region</h3>
+        </div>
+    </div>
+
+
+
+    <footer class="custom-footer text-center text-white py-5 mt-5">
+        <div class="container">
+            <h4 class="footer-title mb-3"> Greece</h4>
+            <p class="footer-subtitle mb-4">Land of Western Civilization</p>
+            <hr class="footer-divider my-4 mx-auto" style="width: 80%; opacity: 0.4;">
+            <p class="small mb-0">© 2025 Greece Travel & Culture. All rights reserved.</p>
+        </div>
+    </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
