--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
         .carousel-caption {
             background: rgba(0, 0, 0, 0.5);
-            /* semi-transparent black */
             border-radius: 10px;
             padding: 15px;
         }
@@ -50,7 +49,6 @@
         .carousel-caption h4,
         .carousel-caption p {
             color: #fff;
-            /* make text white */
         }
 
         .intro-section {
@@ -150,16 +148,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item mx-2">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#introduction">Introduction</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">Culture</a>
+                        <a class="nav-link" href="#culture">Culture</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">Tourism</a>
+                        <a class="nav-link" href="#arts">Arts</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">History</a>
+                        <a class="nav-link" href="#history">History</a>
                     </li>
                 </ul>
             </div>
@@ -173,7 +171,7 @@
         </video>
     </div>
 
-    <div class="container intro-section">
+    <div class="container intro-section" id="introduction">
         <h2>Introduction to Greece</h2>
         <p>
             Greece, often called the cradle of Western civilization, is a country rich in history,
@@ -234,7 +232,7 @@
     </div>
 
 
-    <div class="container culture-section">
+    <div class="container culture-section" id="culture">
         <h2>Greek Culture and Traditions</h2>
         <p>
             Greek culture is rich and lively, shaped by ancient history and strong family values. People enjoy music,
@@ -292,7 +290,7 @@
         </div>
     </div>
 
-    <div class="container arts-section">
+    <div class="container arts-section" id="arts">
         <h2>Greek Arts</h2>
         <p>
             Greek art refers to the visual and applied arts, including architecture, created by the ancient Greeks,
@@ -317,7 +315,7 @@
         </div>
     </div>
 
-    <div class="container history-section">
+    <div class="container history-section" id="history">
         <h2>Greek History</h2>
         <p>
             Greek history spans from prehistoric times to the modern era, beginning with Stone Age hunter-gatherers and
